--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>My webapp</title>
+        <script type="text/javascript"
+            src="@routes.WebJarAssets.at(WebJarAssets.locate("leaflet.js"))"></script>
+        <script type="text/javascript" src="@routes.Assets.at("main.js")"></script>
     </head>
     <body>
         <h1>My webapp</h1>
